src/test/deca/syntax/invalid/parser/manque_pts_virgules.deca
// Trop peu de ;

// Date: 20.01.2022

{

    int a = 2;
    int b = 3
    while (b > a){
        b = b - 1;
    }
    return b;

}